fix mini-accordion button text going behind "+"/"-"

--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -175,11 +175,7 @@
     border: 2px solid #AEB0B5 !important;
     margin: 0px;
   }
-
-  .section-button-span {
-    letter-spacing: 0.4px;
-  }
-
+  
   .section-content {
     max-width: 25em;
   }
